service/tests/models/snapshots/addresses/customer_cannot_read_or_update_another_customers_address@addresses.snap
---
source: tests/models/addresses.rs
expression: "(found, updated)"
---
(
    Err(
        EntityNotFound,
    ),
    Err(
        EntityNotFound,
    ),
)
